errorFIle.txt
/home/nicola/Documents/Scacchiera-elettronica/src/Piece.cpp: In member function ‘bool Alfiere::is_valid_move(Piece (&)[Y][X], int, int, int, int)’:
/home/nicola/Documents/Scacchiera-elettronica/src/Piece.cpp:260:26: error: no matching function for call to ‘Alfiere::is_end_same_color(int&, int&)’
  260 |     if (is_end_same_color(end_y, end_x)) //posso crearlo nella classe padre is_friend
      |         ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
In file included from /home/nicola/Documents/Scacchiera-elettronica/src/Piece.cpp:6:
/home/nicola/Documents/Scacchiera-elettronica/include/Piece.h:27:10: note: candidate: ‘template<int Y, int X> bool Piece::is_end_same_color(Piece (&)[Y][X], int, int)’
   27 |     bool is_end_same_color(Piece (&Board)[Y][X], int end_y, int end_x);
      |          ^~~~~~~~~~~~~~~~~
/home/nicola/Documents/Scacchiera-elettronica/include/Piece.h:27:10: note:   template argument deduction/substitution failed:
/home/nicola/Documents/Scacchiera-elettronica/src/Piece.cpp:260:26: note:   mismatched types ‘Piece [Y][X]’ and ‘int’
  260 |     if (is_end_same_color(end_y, end_x)) //posso crearlo nella classe padre is_friend
      |         ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~


 Main.cpp:(.text+0x22a): undefined reference to `Rules::is_checkmate(Chessboard&, bool)'
/usr/bin/ld: Main.cpp:(.text+0x458): undefined reference to `Rules::is_draw(Chessboard&)'
/usr/bin/ld: CMakeFiles/main.dir/src/Chessboard.cpp.o: in function `Chessboard::move(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, bool)':
Chessboard.cpp:(.text+0x6c8): undefined reference to `bool Piece::move<8, 8>(Piece (&) [8][8], int, int, int, int)'
/usr/bin/ld: CMakeFiles/main.dir/src/Chessboard.cpp.o: in function `Chessboard::random_move[abi:cxx11](int, int)':
Chessboard.cpp:(.text+0xadd): undefined reference to `std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > Piece::random_position<8, 8>(Piece (&) [8][8], int, int)'
/usr/bin/ld: CMakeFiles/main.dir/src/Chessboard.cpp.o: in function `Piece::Piece(Piece&&)':
Chessboard.cpp:(.text._ZN5PieceC2EOS_[_ZN5PieceC5EOS_]+0xd): undefined reference to `vtable for Piece'
/usr/bin/ld: CMakeFiles/main.dir/src/Piece.cpp.o: in function `Piece::Piece()':
Piece.cpp:(.text+0x9): undefined reference to `vtable for Piece'
/usr/bin/ld: CMakeFiles/main.dir/src/Piece.cpp.o: in function `Piece::Piece(bool, int, int)':
Piece.cpp:(.text+0x4a): undefined reference to `vtable for Piece'
/usr/bin/ld: CMakeFiles/main.dir/src/Piece.cpp.o:(.rodata._ZTV5Nullo[_ZTV5Nullo]+0x10): undefined reference to `Piece::is_valid_move()'
/usr/bin/ld: CMakeFiles/main.dir/src/Piece.cpp.o:(.rodata._ZTV6Pedone[_ZTV6Pedone]+0x10): undefined reference to `Piece::is_valid_move()'
/usr/bin/ld: CMakeFiles/main.dir/src/Piece.cpp.o:(.rodata._ZTV7Cavallo[_ZTV7Cavallo]+0x10): undefined reference to `Piece::is_valid_move()'
/usr/bin/ld: CMakeFiles/main.dir/src/Piece.cpp.o:(.rodata._ZTV7Alfiere[_ZTV7Alfiere]+0x10): undefined reference to `Piece::is_valid_move()'
/usr/bin/ld: CMakeFiles/main.dir/src/Piece.cpp.o:(.rodata._ZTV5Torre[_ZTV5Torre]+0x10): undefined reference to `Piece::is_valid_move()'
/usr/bin/ld: CMakeFiles/main.dir/src/Piece.cpp.o:(.rodata._ZTV5Donna[_ZTV5Donna]+0x10): more undefined references to `Piece::is_valid_move()' follow
/usr/bin/ld: CMakeFiles/main.dir/src/Piece.cpp.o:(.rodata._ZTI5Nullo[_ZTI5Nullo]+0x10): undefined reference to `typeinfo for Piece'
/usr/bin/ld: CMakeFiles/main.dir/src/Piece.cpp.o:(.rodata._ZTI6Pedone[_ZTI6Pedone]+0x10): undefined reference to `typeinfo for Piece'
/usr/bin/ld: CMakeFiles/main.dir/src/Piece.cpp.o:(.rodata._ZTI7Cavallo[_ZTI7Cavallo]+0x10): undefined reference to `typeinfo for Piece'
/usr/bin/ld: CMakeFiles/main.dir/src/Piece.cpp.o:(.rodata._ZTI7Alfiere[_ZTI7Alfiere]+0x10): undefined reference to `typeinfo for Piece'
/usr/bin/ld: CMakeFiles/main.dir/src/Piece.cpp.o:(.rodata._ZTI5Torre[_ZTI5Torre]+0x10): undefined reference to `typeinfo for Piece'
/usr/bin/ld: CMakeFiles/main.dir/src/Piece.cpp.o:(.rodata._ZTI5Donna[_ZTI5Donna]+0x10): more undefined references to `typeinfo for Piece' follow
